services/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
  namespace: sso-dev
spec:
  type: ClusterIP
  selector:
    app: keycloak-dev
  ports:
    - name: http
      port: 8080
      targetPort: 8080
