services/keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: sso-dev
  annotations:
    konghq.com/strip-path: "true"   # Strip the prefix so Keycloak receives correct paths
spec:
  ingressClassName: kong
  rules:
  - host: id-dev.krossform.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak-service
            port:
              number: 8080
